TS-3076: fix minor strtok_r errors